Fixing some overflow CSS issues
Tested in IE, FF and Chrome

R=chrishenry
DELTA=2  (0 added, 1 deleted, 1 changed)


Revision created by MOE tool push_codebase.
MOE_MIGRATION=5243


git-svn-id: https://closure-library.googlecode.com/svn/trunk@2060 0b95b8e8-c90f-11de-9d4f-f947ee5921c8

--- a/closure/goog/css/charpicker.css
+++ b/closure/goog/css/charpicker.css
@@ -18,8 +18,7 @@
 .goog-char-picker-hovercard {
   border: solid 5px #ffcc33;
   min-width: 64px;
-  max-width: 200px;
-  height: 64px;
+  max-width: 160px;
   padding: 16px;
   background-color: white;
   text-align: center;
